2011-10-07  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/errorhandler.hxx:
 - Forgot PQXX_LIBEXPORT.  Thanks Kirit Saelensminde.
2011-10-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/basic_connection.hxx, include/pqxx/robusttransaction.hxx,
 include/pqxx/transaction.hxx, src/connection_base.cxx, src/largeobject.cxx,
 src/notification.cxx, src/pipeline.cxx, src/tablereader.cxx,
 src/tablewriter.cxx, src/transaction_base.cxx:
 - Updated "quiet destructors" to use quiet_errorhandler.
 - Fixes #224.  Thanks Kirit Saelensminde for testing this when asked.
2011-10-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/connection_base.cxx:
 - Refuse to escape "tricky" identifier without PQescapeIdentifier.
 - Fixes remaining issue with #221.  Thanks Andreas Freund.
2011-10-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/Makefile.am, include/pqxx/binarystring.hxx,
 include/pqxx/internal/gates/connection-parameterized-invocation.hxx,
 include/pqxx/internal/gates/connection-prepare-declaration.hxx,
 include/pqxx/internal/gates/connection-prepare-invocation.hxx,
 include/pqxx/internal/gates/connection-transaction.hxx,
 include/pqxx/internal/statement_parameters.hxx,
 include/pqxx/prepared_statement.hxx, include/pqxx/transaction_base.hxx,
 src/binarystring.cxx, src/connection_base.cxx, src/prepared_statement.cxx,
 src/statement_parameters.cxx, src/transaction_base.cxx, test/test092.cxx,
 test/unit/test_prepared_statement.cxx:
 - Require server version 8.0 or better.
 - Require backend protocol 3 or better.
 - No longer need to declare parameter lists for prepared statements.
 - Same for parameterized statements.
 - binarystring can now also come from a std::string, or {void *, size_t}.
 - To produce a binary parameter, simply pass a binarystring.
 - No longer need connection-prepare-declaration call gate.
2011-10-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 configure/sample-headers/libpq/7.3, configure/sample-headers/libpq/7.4:
 - Removed.